# RP2350

./: .gitignore  README.md  test_serial.py
docs/waveshare-rp2350/RP2350-LCD-1.28/: DEMO_MAP.md  IMU_QUICK_REF.md  INDEX.md  RP2350-LCD-1.28.html
docs/waveshare-rp2350/RP2350-LCD-1.28/demo/RP2350-LCD-1.28/C/: CMakeLists.txt
docs/waveshare-rp2350/RP2350-LCD-1.28/demo/RP2350-LCD-1.28/C/examples/: CMakeLists.txt
docs/waveshare-rp2350/RP2350-LCD-1.28/demo/RP2350-LCD-1.28/C/uf2/: RP2350-LCD-1.28.uf2
docs/waveshare-rp2350/RP2350-LCD-1.28/demo/RP2350-LCD-1.28/Python/: WAVESHARE-RP2350-LCD-1.28.uf2
docs/waveshare-rp2350/RP2350-LCD-1.28/demo/RP2350-LCD-1.28/Python/RP2350-LCD-1.28/: ReadmeCN.txt  ReadmeEN.txt
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/C/: CMakeLists.txt
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/C/examples/: CMakeLists.txt
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/C/examples/inc/: ImageData.h  LCD_test.h  LVGL_example.h
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/C/examples/src/: LCD_1in28_LVGL_test.c  LVGL_example.c
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/C/lib/Config/: CMakeLists.txt
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/C/lib/LCD/: LCD_1in28.c  LCD_1in28.h
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/C/uf2/: RP2350-LCD-1.28.uf2
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/Python/: WAVESHARE-RP2350-LCD-1.28.uf2
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/Python/examples/: LCD_1in28_LVGL_test.py  LVGL_example.py
docs/waveshare-rp2350/RP2350-LCD-1.28/lvgl-demo/RP2350-LCD-1.28-LVGL/Python/lib/: LCD_1in28.py  LVGL.py  QMI8658.py
pc_stats/: .env.example  README.md  deploy.ps1  requirements-host.txt
pc_stats/device/: lcd_1in28.py  pc_stats_display.py
pc_stats/host/: color_test.py  debug_lhm.py  layouts.py  pc_stats_sender.py
